    comment in src/confmodule.c.)
  * It's the 21st century. Move configure.in to configure.ac so that we use
    autoconf >= 2.50.
  * Fix broken --without-rpath configure option.
  * Clean up configure.ac quoting and message emission.
  * Use printf rather than echo to send commands to cdebconf, to avoid
    breaking escaped commands if /bin/sh is dash (cf. #306134).

 -- Colin Watson <cjwatson@debian.org>  Wed, 27 Jun 2007 22:35:27 +0100

cdebconf (0.117) unstable; urgency=low

  [ Attilio Fiandrotti ]
  * gtk.c: remove some compatibility conditions that are no longer needed.
    Closes: #427657.
  * Removed workaround for #404482, fixed upstream in gtk+ release 2.10.13.

  [ Otavio Salvador ]
  * Reduce the usage of casting to struct frontend_data on GTK frontend
    code. Closes: #426745.

  [ Colin Watson ]
  * Remove five function pointers in every struct template that always
    pointed to the same functions (or were entirely unused, in the cases of
    get and set); export those functions from template.c instead.
  * Fix off-by-one error reading from confmodule (thanks, Baruch Even;
    closes: #430108).
  * Document proposed PROGRESS REGION command.
  * Fix a bunch of reference-counting bugs and other memory leaks.
  * If DEBCONF_DROP_TRANSLATIONS is set to 1, then don't read translations
    we aren't going to use, and reload the templates database if the
    language is changed since we might not have the correct translations in
    memory any more. This saves around 20MB of memory at d-i run-time
    (closes: #329743). Note that this means that after the templates
    database is first saved (in practice, after anna has run), it will no
    longer be possible to change the language and get translated messages.

 -- Colin Watson <cjwatson@debian.org>  Wed, 27 Jun 2007 20:44:38 +0100

cdebconf (0.116) unstable; urgency=low

  [ Frans Pop ]
  * Increase TITLE_PADDING to 9 to allow for all extra characters around the