@@ -9,6 +9,8 @@ cdebconf (0.118) UNRELEASED; urgency=low
   * Clean up configure.ac quoting and message emission.
   * Use printf rather than echo to send commands to cdebconf, to avoid
     breaking escaped commands if /bin/sh is dash (cf. #306134).
+  * Avoid using non-XSI local variables; instead use a nasty temporary IFS
+    setting hack and _db_local_ namespace (cf. #242011).
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 27 Jun 2007 22:35:27 +0100
 
